syntax = "proto3";

option csharp_namespace = "CommandsService.Protos";

import "platformModels.proto";

service GrpcPlatform {
  rpc GetAllPlatform(GetAllPlatformRequest) returns (GetAllPlatformResponse);
}